--- a/index.css
+++ b/index.css
@@ -77,14 +77,14 @@ width: 150px;
 
   .feature-text .p1{
     text-align: left;
-    margin-left: 15px;
+    margin-left: 1px;
     font-size: medium;
     margin-top: 5%; 
   }
 
   .feature-text .p2{
     font-family: "Sofia", sans-serif;
-    font-size: 13px;
+    font-size: 12px;
   }
 
   .lines {
@@ -124,8 +124,8 @@ width: 150px;
     position: absolute;
     margin-left: 31%;
     width: 30%;
-    height: 26%;
     margin-top: -5%; 
+    position: absolute;
   }
 
   .feature-list{
@@ -136,7 +136,7 @@ width: 150px;
 
   .feature-item {
     background-color: rgb(196, 101, 37);
-    height: 37px;
+    height: 40px;
     margin: 5px;
     padding: 5px;
     color: black;
@@ -159,14 +159,13 @@ width: 150px;
 .about-row{
   display:flex;
   flex-direction: column;
-  flex-wrap: nowrap;
 }
+
 .about-col{
   border: 1px solid black;
     margin-left:  7%;
     margin-right: 7%;
     margin: 2%;
-    
 }
 
 .about-pic{
@@ -204,33 +203,36 @@ width: 150px;
     padding-top: 1%;
   }
 
-  #section{
+  #section {
     display: block;
   margin-top:  2%;
-  
   }
+
   .feature-row {
     display: flex;
    margin-left: 5%;
    margin-top: 12%;
 }
 
-.about-row{
-  display:flex;
-  flex-direction:row;
-  flex-wrap: nowrap;
-  justify-content:space-around;
+.about-row {
+  display: grid;
+  align-content: start;
+  grid-template-columns: auto auto auto;
+  gap: 10px;
+  padding: 5px;
 }
 
 .about-pic{
   width: 100%;
-  height: 35%;
+  height: 250px;
   border-radius: 4%;
-
 }
 
 .about-col{
-  border: 1px solid black; 
+  border: 1px solid black;
+    margin-left:  7%;
+    margin-right: 7%;
+    margin: 2%;
 }
 
 .about-title{
@@ -243,6 +245,6 @@ width: 150px;
   font-size: 12px;
   margin: 2%;
 }
-
-
 }
+}
+
